@@ -40,6 +40,8 @@ Changes in version 0.1.2.2-alpha - 2006-??-??
       any router can call itself Unnamed; directory servers will never
       allocate Unnamed to any particular router; clients won't believe that
       any router is the canonical Unnamed.
+    - New controller event to alert the controller when our server descriptor
+      has changed.
 
   o Security Fixes, minor:
     - If a client asked for a server by name, and we didn't have a
